--- a/omnisafe/configs/off-policy/SAC.yaml
+++ b/omnisafe/configs/off-policy/SAC.yaml
@@ -19,7 +19,7 @@ defaults:
   # training configurations
   train_cfgs:
     # device to use for training, options: cpu, cuda, cuda:0, cuda:0,1, etc.
-    device: cpu
+    device: cuda:0
     # number of threads for torch
     torch_threads: 16
     # number of vectorized environments
@@ -73,9 +73,9 @@ defaults:
     # The value of alpha
     alpha: 0.2
     # Whether to use auto alpha
-    auto_alpha: False
+    auto_alpha: True
     # use cost
-    use_cost: False
+    use_cost: True
   # logger configurations
   logger_cfgs:
     # use wandb for logging
